# FreeTypeWrapper

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
FreeTypeWrapper/: CMakeLists.txt
FreeTypeWrapper/Include/: FreeTypeConnector.h  FreeTypeHelper.h
FreeTypeWrapper/Include/FreeTypeWrapper/: BitmapFile.h  FreeTypeCommon.h  FreeTypeConnector.h  FreeTypeHelper.h
FreeTypeWrapper/Source/: BlitBox.h  CodePoint.h  FreeTypeConnector.cpp  FreeTypeFont.h  FreeTypeHeaders.h  FreeTypeRenderer.cpp  FreeTypeRenderer.h  MetaTextParser.cpp  MetaTextParser.h
Test/: CMakeLists.txt  Test.cpp
